// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FuzzySearcher calls the runFuzzy function with query "john" AND returns 1 result 1`] = `
Array [
  Object {
    "item": Object {
      "firstname": "John",
      "lastname": "Connor",
    },
    "refIndex": 0,
  },
]
`;

exports[`FuzzySearcher supports custom options 1`] = `
Array [
  Object {
    "item": Object {
      "firstname": "John",
      "lastname": "Connor",
    },
    "refIndex": 0,
  },
  Object {
    "item": Object {
      "firstname": "Johan",
      "lastname": "Connor",
    },
    "refIndex": 2,
  },
]
`;
